Fixed topicMenu remaining open on mobile

--- a/src/components/MainPage/menu/style.module.scss
+++ b/src/components/MainPage/menu/style.module.scss
@@ -41,7 +41,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-
+    user-select: none;
     cursor: pointer;
 }
 
